compiler/testData/diagnostics/tests/dataClasses/dataObjectDisabled.fir.kt
// LANGUAGE: -DataObjects
<!WRONG_MODIFIER_TARGET!>data<!> object Object
